--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ jobs:
         - task: AzureWebApp@1
           displayName: 'Deploy Azure Web App : {{ webAppName }}'
           inputs:
-            azureSubscription: $(azureServiceConnectionId)
+            #azureSubscription: $(azureServiceConnectionId)
             appName: $(webAppName)
             package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
 
